--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oclock UI</title>
     <link rel="stylesheet" href="<%=baseUrl%>/style.css" />
+    <link rel="stylesheet" href="<%=baseUrl%>/dist/mc-calendar.min.css"/>
+    <script src="<%=baseUrl%>/dist/mc-calendar.min.js"></script>
     <link rel="stylesheet" href="<%=baseUrl%>/modal.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/responsive.css" />
   </head>
