--- a/views/partials/icons/edit-svg.ejs
+++ b/views/partials/icons/edit-svg.ejs
@@ -1,5 +1,5 @@
 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-  <rect width="40" height="40" rx="20" fill="#2E2E2E"/>
+  <rect width="40" height="40" rx="20" fill="#7B81A1"/>
   <path d="M21.264 13.7969L14.9181 20.5138C14.6785 20.7689 14.4466 21.2713 14.4003 21.6191L14.1143 24.1235C14.0138 25.0278 14.6631 25.6462 15.5597 25.4916L18.0486 25.0665C18.3964 25.0046 18.8833 24.7496 19.123 24.4868L25.4689 17.7699C26.5664 16.6104 27.0611 15.2887 25.3529 13.6732C23.6524 12.0732 22.3616 12.6375 21.264 13.7969V13.7969Z" stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
   <path d="M13.3335 28.0192H27.2465M20.205 14.9177C20.367 15.9541 20.8687 16.9074 21.6311 17.6279C22.3935 18.3483 23.3736 18.7952 24.4176 18.8984L20.205 14.9177Z" stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
   </svg>
