--- a/views/pages/search-forgot-user.ejs
+++ b/views/pages/search-forgot-user.ejs
@@ -2,8 +2,7 @@
 <script>
   const searchBtn = document.querySelector("#search-btn");
   const continueBtn = document.querySelector("#continue-btn");
-  const btnText = document.querySelector("#btn-Text");
-  const cancelBtn = document.querySelector("#cancel-btn");
+  const cancleBtn = document.querySelector("#cancle-btn");
   const details = document.getElementById("details");
   const mailInput = document.getElementById("mail-input");
   const errorMsg = document.querySelector("#error-msg");
@@ -37,8 +36,6 @@
         searchBtn.style.display = "none";
         continueBtn.addEventListener("click", async (e) => {
           e.preventDefault();
-          btnText.classList.add("btn-text")
-          continueBtn.classList.add("btn-loading")
           const result = await fetch("/recover", {
             method: "POST",
             headers: {
@@ -46,9 +43,7 @@
             },
             body: JSON.stringify({ email: mail }),
           });
-
           const data = await result.json();
-          
           if (data.result) {
             details.innerText =
               "Please check your emails for a message with your recover password";
@@ -59,7 +54,7 @@
           </div>
       `;
             continueBtn.style.display = "none";
-            cancelBtn.innerText = "Go Back";
+            cancleBtn.innerText = "Go Back";
           }
         });
       } else if (user.errors) {
