--- a/views/pages/search-account-active.ejs
+++ b/views/pages/search-account-active.ejs
@@ -2,8 +2,7 @@
 <script>
   const searchBtn = document.querySelector("#search-btn");
   const continueBtn = document.querySelector("#continue-btn");
-  const btnText = document.querySelector("#btn-Text");
-  const cancelBtn = document.querySelector("#cancel-btn");
+  const cancleBtn = document.querySelector("#cancle-btn");
   const details = document.getElementById("details");
   const mailInput = document.getElementById("mail-input");
   const errorMsg = document.querySelector("#error-msg");
@@ -37,8 +36,6 @@
       searchBtn.style.display = "none";
       continueBtn.addEventListener("click", async (e) => {
         e.preventDefault();
-        btnText.classList.add("btn-text")
-        continueBtn.classList.add("btn-loading")
         const result = await fetch("/user-verify", {
           method: "POST",
           headers: {
@@ -57,7 +54,7 @@
           </div>
       `;
           continueBtn.style.display = "none";
-          cancelBtn.innerText = "Go Back"
+          cancleBtn.innerText = "Go Back"
         }
       });
     } else if (user.errors) {
