update token for user avatar

--- a/views/pages/options.ejs
+++ b/views/pages/options.ejs
@@ -36,7 +36,7 @@
         <p class="card-text">Click to add your project.</p>
       </div>
     </a>
-    <a href="/holiday">
+    <a href="/options/holiday">
       <div class="options-card">
         <div class="card-icon">
           <svg
